Crachá criado na NLW

--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
-<!--
-  Html Hiper texto
-  é um testo com links
-
-  Markup marcação
-  Tags
-  Linguage regras de linguagem
--->
-
 <!DOCTYPE html>
 
-<html>
+<html lang="pt_BR">
   <head>
-    <title>Ana Beatriz - DoWhile 2021</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="style.css" />
 
@@ -21,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap"
       rel="stylesheet"
     />
+    <title>Ana Beatriz - DoWhile 2021</title>
   </head>
   <body>
     <main>
@@ -41,20 +34,17 @@
         <p id="userBio">Estudante</p>
 
         <ul id="socialLinks">
-          <li class="linkedin">
-            <a
-              href="https://www.linkedin.com/in/anabeatrizcraveiros"
-              target="_blank"
-            >
+          <li id="socialList" class="linkedin">
+            <a href="https://www.linkedin.com//in/maykbrito/" target="_blank">
               <img src="images/Linkedin.svg" alt="Ícone Linkedin" />
             </a>
           </li>
-          <li class="behance">
-            <a href="https://www.behance.net/anabeacraveiro" target="_blank">
+          <li id="socialList" class="behance">
+            <a href="https://www.behance.net/maykbrito" target="_blank">
               <img src="images/Behance.svg" alt="Ícone Behance" />
             </a>
           </li>
-          <li class="instagram">
+          <li id="socialList" class="instagram">
             <a href="https://instagram.com/maykbrito" target="_blank">
               <img src="images/Instagram.svg" alt="Ícone Instagram" />
             </a>
